Realizada a parte mobile com os repositorios abertos

--- a/index.html
+++ b/index.html
@@ -66,5 +66,97 @@
             </div>
         </div>
     </div>
+    <div class="container-content">
+        <div class="content">
+            <h2 class="tittle">
+                <span class="part1">Node</span>
+                /
+                <span class="part2">Release</span>
+            </h2>
+            <div class="subtittle">
+                <span>
+                    Node.js Foundation Release Working Group.
+                </span>
+            </div>
+            <div class="star-fork">
+                <div class="stars">
+                    <img src="star-complete.svg" alt="star">
+                    <div class="quantity">
+                        <span>
+                            1.569
+                        </span>
+                    </div>
+                </div>
+                <div class="forks">
+                    <img src="fork.svg" alt="forks">
+                    <div class="quantity">
+                        <span>
+                            142
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="content">
+            <h2 class="tittle">
+                <span class="part1">Cordeiro</span>
+                /
+                <span class="part2">Angular Choosen</span>
+            </h2>
+            <div class="subtittle">
+                <span>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis vel etiam tellus velit pellentesque scelerisque ut risus.
+                </span>
+            </div>
+            <div class="star-fork">
+                <div class="stars">
+                    <img src="star-complete.svg" alt="star">
+                    <div class="quantity">
+                        <span>
+                            726
+                        </span>
+                    </div>
+                </div>
+                <div class="forks">
+                    <img src="fork.svg" alt="forks">
+                    <div class="quantity">
+                        <span>
+                            91
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="content">
+            <h2 class="tittle">
+                <span class="part1">Teste</span>
+                /
+                <span class="part2">App Release 1.03</span>
+            </h2>
+            <div class="subtittle">
+                <span>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis vel etiam tellus velit pellentesque scelerisque ut risus.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis vel etiam tellus velit pellentesque 
+                </span>
+            </div>
+            <div class="star-fork">
+                <div class="stars">
+                    <img src="star-complete.svg" alt="star">
+                    <div class="quantity">
+                        <span>
+                            9.327
+                        </span>
+                    </div>
+                </div>
+                <div class="forks">
+                    <img src="fork.svg" alt="forks">
+                    <div class="quantity">
+                        <span>
+                            562
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
