Feita parte das informações adicionais

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-3.4.0.js"></script>
+    <script src="script.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -23,8 +26,36 @@
                 <span>Head development team Front-End Magazord - Tagged (#BZ)</span>
             </div>
             <div class="additional-information">
-                <h2>Informações Adicionais</h2>
-                <img src="arrow.svg" alt="arrow">
+                <div class="menu-informations">
+                    <h2>Informações Adicionais</h2>
+                    <img class="arrow-down" src="arrow.svg" alt="arrow">
+                </div>
+                <div class="informations">
+                    <div class="info company">
+                        <img src="company.svg" alt="empresa">
+                        <span class="text-information">
+                            Magazord - plataforma
+                        </span>
+                    </div>
+                    <div class="info location">
+                        <img src="location.svg" alt="local">
+                        <span class="text-information">
+                            Rio do Sul - SC
+                        </span>
+                    </div>
+                    <div class="info chain">
+                        <img src="share.svg" alt="Corrente">
+                        <span class="text-information">
+                            Cordas.hub.uok
+                        </span>
+                    </div>
+                    <div class="info instagram">
+                        <img src="instagram.svg" alt="instagram">
+                        <span class="text-information">
+                            Gabriel.s.cordeiro
+                        </span>
+                    </div>
+                </div>
             </div>
         </div>
 
