--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/jquery-migrate-3.4.0.js"></script>
     <script src="script.js"></script>
-    <title>Document</title>
+    <title>Magazord Test</title>
 </head>
 <body>
     <div class="container-geral">
