--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
                 <div class="search-area">
                     <input type="search" id="input-search">
-                    <label for="input-search"><img src="search-icon.svg" alt="search icon"></label>
+                    <img class="lupa" onclick="document.getElementById('input-search').click()" src="search-icon.svg" alt="search icon">
                 </div>
             </div>
         </div>
