--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                     </div>
                 </div>
                 <div class="search-area">
-                    <input type="search" id="input-search">
-                    <img class="lupa" onclick="document.getElementById('input-search').click()" src="search-icon.svg" alt="search icon">
+                    <input content="initial-scale=1, maximum-scale=1" type="text" id="input-search">
+                    <img class="lupa" src="search-icon.svg" alt="search icon">
                 </div>
             </div>
         </div>
